# tun2sock

./: .gitignore  CMakeLists.txt
client/: DPRelay.c  DataProto.c
cmake/modules/: FindOpenSSL.cmake
lwip/custom/: lwipopts.h
lwip/src/api/: api_msg.c
lwip/src/apps/snmp/: snmp_mib2_ip.c
lwip/src/core/: netif.c  tcp.c  tcp_out.c  udp.c
lwip/src/core/ipv4/: etharp.c  ip4.c
lwip/src/core/ipv6/: ip6.c  nd6.c
lwip/src/include/lwip/: errno.h
lwip/src/include/netif/ppp/: ipcp.h  ppp.h  pppol2tp.h
lwip/src/netif/ppp/: auth.c  ipcp.c
misc/: ascii_utils.h  basic.h  ipaddr.h  socket_gc.h
ncd/extra/: NCDIfConfig.c
ncd/modules/: net_ipv4_route.c  net_ipv6_route.c
scripts/: add_baidu_route.bat  add_route.bat  del_baidu_route.bat  del_route.bat
socksclient/: BSocksClient.c  BSocksClient.h  CMakeLists.txt  Filter.h
system/: BAddr.h
tun2socks/: CMakeLists.txt  test.c  tun2socks.c  tun2socks.rc
tuntap/: CMakeLists.txt  route.c  route.h  tapwin32-funcs.c  tapwin32-funcs.h  wintap-common.h
udpgw_client/: UdpGwClient.c
